// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostPreview /> renders correctly closed 1`] = `
<SideModal
  close={[MockFunction]}
  opened={false}
>
  <WrappedIdeaContent
    closePreview={[MockFunction]}
    handleClickEdit={[MockFunction]}
    ideaId={null}
  />
</SideModal>
`;

exports[`<PostPreview /> renders the idea content initially 1`] = `
<SideModal
  close={[MockFunction]}
  opened={true}
>
  <WrappedIdeaContent
    closePreview={[MockFunction]}
    handleClickEdit={[MockFunction]}
    ideaId="GreatIdea"
  />
</SideModal>
`;

exports[`<PostPreview /> renders the idea edit correctly 1`] = `
<SideModal
  close={[MockFunction]}
  opened={true}
>
  <WrappedIdeaEdit
    goBack={[MockFunction]}
    ideaId="GreatIdea"
  />
</SideModal>
`;
